--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "hkr33_huang_medfilt2.h": "c",
-        "mex.h": "c"
+        "mex.h": "c",
+        "array": "c"
     }
 }
